not understanding Java!!!!

--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 <body>
     <div id="container">
         <header id="header">
-            <h1>drag and drop! to Mix and play Music</h1>
-            <p>lets play Some Music</p>
+            <p>Lets play Some Music</p>
+            <h1>Drag and Drop! to Mix and play Music</h1>
         </header>
 
-        <section class="dropzone">
-            <div class="beat-1">
-                
+        <section id="dropzone">
+            <h2>Drop Here!</h2>
+            <div class="beat">
+                <div class="drop"></div>
+                <div class="drop"></div>
+                <div class="drop"></div>
             </div>
         </section>
 
         <section id="pick-one">
             <div class="options-1">
-                <div class="CD" id="music-dev-1">
+                <div class="CD" id="music-dev-1" draggable="true">
                     <img src=".//assets/CD.svg" alt="music" height="150">
                 </div>
                 <div class="CD" id="music-dev-2">
