--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Drag and Drop! to Mix and play Music</h1>
         </header>
 
-        <section id="dropzone">
+        <section id="dropzone" >
             <h2>Drop Here!</h2>
             <div class="beat">
                 <div class="drop"></div>
@@ -68,7 +68,7 @@
         </section>
         <footer>
             <div  class="controls">
-                <img src=".//assets/stop.svg" alt="stop(Reload)" width="200px">
+                <img id="reload-btn" src=".//assets/stop.svg" alt="stop(Reload)" width="200px">
                 <img src=".//assets/play.svg" alt="play" width="200px">
                 <img src=".//assets/unmute.svg" alt="volume-mute/unmute" width="200px">
             </div>
