DND and audio working

--- a/index.html
+++ b/index.html
@@ -18,59 +18,72 @@
         <section id="dropzone" >
             <h2>Drop Here!</h2>
             <div class="beat">
-                <div class="drop"></div>
-                <div class="drop"></div>
-                <div class="drop"></div>
+                <div class="drop" id="drop1"></div>
+                <div class="drop" id="drop2"></div>
+                <div class="drop" id="drop3"></div>
+
             </div>
         </section>
 
         <section id="pick-one">
             <div class="options-1">
-                <div class="CD" id="music-dev-1" draggable="true">
+                <div class="CD" id="music-dev-1" draggable="true" data-audio="audio1" >
                     <img src=".//assets/CD.svg" alt="music" height="150">
+                    <audio id="audio1" src="./assets/audio1.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-2">
+                <div class="CD" id="music-dev-2" draggable="true" data-audio="audio2">
                     <img src=".//assets/CD.svg" alt="music" height="150">
+                    <audio id="audio2" src="./assets/audio2.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-3">
+                <div class="CD" id="music-dev-3" draggable="true" data-audio="audio3">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio3" src="./assets/audio3.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-4">
+                <div class="CD" id="music-dev-4" draggable="true" data-audio="audio4">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio4" src="./assets/audio4.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-5">
+                <div class="CD" id="music-dev-5" draggable="true" data-audio="audio5">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio5" src="./assets/audio5.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-6">
+                <div class="CD" id="music-dev-6" draggable="true" data-audio="audio6">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio6" src="./assets/audio6.mp3"></audio>
                 </div>
             </div>
             <div class="options-2">
-                <div class="CD" id="music-dev-7">
+                <div class="CD" id="music-dev-7" draggable="true" data-audio="audio7">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio7" src="./assets/audio7.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-8">
+                <div class="CD" id="music-dev-8" draggable="true" data-audio="audio8">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio8" src="./assets/audio8.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-9">
+                <div class="CD" id="music-dev-9" draggable="true" data-audio="audio9">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio9" src="./assets/audio9.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-10">
+                <div class="CD" id="music-dev-10" draggable="true" data-audio="audio10">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio10" src="./assets/audio10.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-11">
+                <div class="CD" id="music-dev-11" draggable="true" data-audio="audio11">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio11" src="./assets/audio11.mp3"></audio>
                 </div>
-                <div class="CD" id="music-dev-12">
+                <div class="CD" id="music-dev-12" draggable="true" data-audio="audio12">
                     <img src=".//assets/CD.svg" alt="Music" height="150">
+                    <audio id="audio12" src="./assets/audio12.mp3"></audio>
                 </div>
-        </div>
+            </div>
         </section>
         <footer>
             <div  class="controls">
-                <img id="reload-btn" src=".//assets/stop.svg" alt="stop(Reload)" width="200px">
+                <img class="stop-btn" src=".//assets/stop.svg" alt="stop(Reload)" width="200px">
                 <img src=".//assets/play.svg" alt="play" width="200px">
-                <img src=".//assets/unmute.svg" alt="volume-mute/unmute" width="200px">
+                <img class="volume-btn" src=".//assets/unmute.svg" alt="volume-mute/unmute" width="200px">
             </div>
         </footer>
     </div>
